Fix width on reusable groups with align values

--- a/themes/shiro/assets/src/editor/style.scss
+++ b/themes/shiro/assets/src/editor/style.scss
@@ -50,4 +50,11 @@
 		margin-left: -10px;
 		margin-right: -10px;
 	}
+
+	// Groups inside of reusable blocks that have align values still get their
+	// width limited by default. This removes that limitation, allowing them to
+	// expand to the correct width of the wrapping group.
+	.is-reusable [data-align] .wp-block-group__inner-container > .wp-block {
+		max-width: none;
+	}
 }
